# routes/auth-routers.js
@@ -7,7 +7,7 @@ import { authenticate, upload } from "../middlewares/index.js";
 const authRouter = express.Router();
 const registerAndLoginSchema = validateBody(userSchemas.registerAndLoginSchema);
 const updateProfilSchema = validateBody(userSchemas.updateProfilSchema);
-
+const waterRateSchema = validateBody(userSchemas.waterRateSchema);
 
 authRouter.post("/register", registerAndLoginSchema, authControler.signup);
 authRouter.post("/login", registerAndLoginSchema, authControler.signin);
@@ -17,5 +17,6 @@ authRouter.patch("/avatars", upload.single("avatarURL"), authenticate, authContr
 authRouter.get("/current", authenticate, authControler.getCurrent);
 authRouter.patch("/", authenticate, updateProfilSchema, authControler.updateProfil);
 
+authRouter.patch("/water-rate", waterRateSchema, authControler.waterRate);
 
 export default authRouter;
